<?xml version="1.0"?>
<package format="2">
  <name>tango_teleop</name>
  <version>2.0.0</version>
  <description>The tango_teleop package allows the robot to be teleoperated from a remote base station</description>
  <maintainer email="robotics@fearn.org.uk">Tomos Fearn</maintainer>
  <license>BSD-3</license>
  <url type="repository">https://github.com/fearn-robotics/tango_rviz</url>
  <author email="robotics@fearn.org.uk">Tomos Fearn</author>

  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlebot3_teleop</build_depend>
  
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>turtlebot3_teleop</build_export_depend>
  
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>

  <export>

  </export>
</package>
